--- a/ITBolt.API/appsettings.json
+++ b/ITBolt.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ITDB": "server=localhost;user id=root;database=it_bolt"
+    "ITDB": "server=localhost;user id=root;database=it_bolt;Convert Zero Datetime=True"
   }
 }
