--- a/ItBolt.WPF/ItBolt.WPF.csproj
+++ b/ItBolt.WPF/ItBolt.WPF.csproj
@@ -2,14 +2,21 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\loginbg.jpg" />
+    <None Remove="Resources\md-row.png" />
+    <None Remove="Resources\searchIcon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
     <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
   </ItemGroup>
 
@@ -17,6 +24,12 @@
     <ProjectReference Include="..\ApiClient\ApiClient.csproj" />
     <ProjectReference Include="..\ITBolt.API\ITBolt.API.csproj" />
     <ProjectReference Include="..\ItBolt.Model\ItBolt.Model.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\loginbg.jpg" />
+    <Resource Include="Resources\md-row.png" />
+    <Resource Include="Resources\searchIcon.png" />
   </ItemGroup>
 
 </Project>
